# os

./: .gitignore
os_lab1/: os_lab1.sln
os_lab1/Common/: Common.vcxproj  Common.vcxproj.filters  Employee.h
os_lab1/Creator/: Creator.cpp  Creator.vcxproj  Creator.vcxproj.filters
os_lab1/Main/: Main.cpp  Main.vcxproj  Main.vcxproj.filters
os_lab1/Reporter/: Reporter.cpp  Reporter.vcxproj  Reporter.vcxproj.filters
os_lab2/: CMakeLists.txt  main.cpp  os_lab2.sln  os_lab2.vcxproj  os_lab2.vcxproj.filters  tests.cpp  thread_func.cpp  thread_func.h
